--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,50 @@
-site_name: obolit.net
+site_name: Obol IT
+nav:
+  - Home: index.md
+  - Tags: tags.md
+  - 'Notes':
+    - Gather ansible facts: gather_ansible_facts.md
+    - Create preseed with LVM and partman: partman_lvm_preseed.md
+    - Use two network gateways with CentOS: two_gateways_centos.md
 theme:
   name: material
+  features:
+    - navigation.sections
+    - navigation.top
+  #   - navigation.tabs
+  palette:
+    - scheme: default
+      toggle:
+        name: Switch to dark mode
+        icon: material/brightness-7
+    - scheme: slate
+      toggle:
+        name: Switch to light mode
+        icon: material/brightness-4
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+extra:
+  generator: false
+  social:
+    - icon: fontawesome/brands/linkedin 
+      link: https://www.linkedin.com/in/obol89/
+    - icon: fontawesome/brands/github
+      link: https://github.com/obol89
+  consent:
+    title: Cookie consent
+    description: >- 
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
+    actions:
+      - accept
+      - reject
+plugins:
+  - search
+  - tags:
+      tags_file: tags.md
