--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,9 @@ nav:
     - Create preseed with LVM and partman: posts/partman_lvm_preseed.md
     - Delete branch in git: posts/delete_git_branch.md
     - Gather or update ansible facts: posts/gather_ansible_facts.md
+    - Move /var to new partition in CentOS: posts/var_to_new_partition.md
+    - Repair corrupted USB drive in Linux: posts/repair_corrupted_usb_drive.md
+    - Repair corrupted USB drive in Windows: posts/repair_corrupted_usb_drive_win.md
     - Use two network gateways with CentOS: posts/two_gateways_centos.md
 theme:
   name: material
