Extending partitions without LVM

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
     - Copy MySQL database: posts/copy_mysql_database.md
     - Delete branch in git: posts/delete_git_branch.md
     - Extend LVM in Linux: posts/extend_lvm_linux.md
+    - Extend partition without LVM in Linux: posts/extending_disk_space_without_lvm.md
     - Gather or update ansible facts: posts/gather_ansible_facts.md
     - Host is not allowed to connect to this MySQL server: posts/host_not_allowed_connect_mysql.md
     - Install Percona MySQL Server 8 on CentOS 8: posts/install_percona_mysql8.md
