--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
     - Extend partition without LVM in Linux: posts/extending_disk_space_without_lvm.md
     - Gather or update ansible facts: posts/gather_ansible_facts.md
     - Host is not allowed to connect to this MySQL server: posts/host_not_allowed_connect_mysql.md
+    - Increase Swap space: posts/increase_swap_space.md
     - Install Percona MySQL Server 8 on CentOS 8: posts/install_percona_mysql8.md
     - List and add Iptables rules: posts/iptables_basics.md
     - Move /var to new partition in CentOS: posts/var_to_new_partition.md
